# boost_serialization

./: CMakeLists.txt  README.md
src/: example.cpp  point_2d.h
